<resources>
    <string name="app_name">Beat on Jeans</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="you_chosed_enought_locals_for_now">You have chosen enough locals for now</string>
    <string name="dislike">Dislike</string>
    <string name="like">Like</string>
    <string name="matches">Matches</string>
    <string name="buscar">Search</string>
    <string name="imagen_de_usuario">User image</string>
    <string name="nombre_de_usuario">Username</string>
    <string name="hours">Hours</string>
    <string name="chat_name">Chat name</string>
    <string name="chat_last_message_send_recieved">Last chat message sent/received</string>
    <string name="chatimage">Chat image</string>
    <string name="notification">Notification</string>
    <string name="chats">Chats</string>
    <string name="empieze_a_escribir_aqu">Start typing here…</string>
    <string name="sendimg">Send image</string>
    <string name="chat_name_img">Chat name</string>
    <string name="name">Name</string>
    <string name="genders">Genres</string>
    <string name="description">Description</string>
    <string name="events">Events</string>
    <string name="tag">Tag</string>
    <string name="featured_musicians">Featured musicians</string>
    <string name="settings">Settings</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="location">Location</string>
    <string name="email">Email</string>
    <string name="user_name_local_name">User name / Venue name</string>
    <string name="save">Save</string>
    <string name="help">Help</string>
    <string name="languaje">Language</string>
    <string name="rating">Rating</string>
    <string name="chat_notification">You have a new message in the chat.</string>
    <string name="match_Notification">You have a new match.</string>
    <string name="rating_Notification">You have received a new review.</string>
    <string name="end_event_Notification">We noticed that an event has ended. How did it go? Rate it!</string>
    <string name="event_propose_Notification">Someone has proposed a new event to you.</string>
    <string name="presentation">Join hundreds of Beaters and create unforgettable events!</string>
    <string name="find_your_beat">Find your beat</string>
    <string name="next">Continue</string>
    <string name="welcome">Welcome!</string>
    <string name="mail">Email</string>
    <string name="sign_up">Sign up</string>
    <string name="log_in">Log in</string>
    <string name="select_rol">Select your role</string>
    <string name="musics">Musician</string>
    <string name="locals">Venue</string>
    <string name="what_mail">What is your email?</string>
    <string name="repeat_password">Re-enter password</string>
    <string name="create_password">Create your password</string>
    <string name="place_direcction">Enter the venue address</string>
    <string name="add_img">Add an image</string>
    <string name="create_username">Create a username</string>
    <string name="write_your_description">Write your description</string>
    <string name="select_the_incidence">Select the incident</string>
    <string name="send">Send</string>
    <string name="encuentra_a_tu_m_sico">Find your musician</string>
    <string name="select_a_zone">Select a zone</string>
    <string name="select_a_musician">Select a musician</string>
    <string name="this_is_a_message">This is a message</string>
    <string name="txt_create_event">Once created, it will be added to each profile. After the event ends, each participant will be able to review the other s performance.</string>
    <string name="txt_user_create_event">This user wants to organize an event with you!</string>
    <string name="aceptar">Accept</string>
    <string name="declinar">Decline</string>
    <string name="select_the_music_genders">Select music genres</string>
    <string name="modify_selection">Modify selection</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="create_new_user_event">Do you want to organize an event with this user?</string>
    <string name="txt_create_new_event">Once created, it will be added to each profile. After the event ends, each participant will be able to review the other s performance.</string>
    <string name="add_date">Add date</string>
    <string name="create">Create</string>
    <string name="how_it_was">Tell us how it went!</string>
</resources>
