<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="top"
    android:layout_marginVertical="5dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ImgChat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/chatimage" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/TxtChatName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chat_name"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/Notification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"
                    android:contentDescription="@string/notification"
                    android:src="@drawable/notify"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/TxtHours"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:gravity="end"
                    android:hint="@string/hours"
                    android:textSize="15sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/TxtLastMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/chat_last_message_send_recieved" />

        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/orange_light_2"/>
</LinearLayout>