<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="15dp"
        android:layout_gravity="top"
        >

        <ImageButton
            android:id="@+id/BtnReturn"
            android:layout_width="50dp"
            android:layout_height="46dp"
            android:layout_gravity="start|center"
            android:background="@drawable/rounded_buttons_search"
            android:src="@drawable/ic_arrow_back"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/settings"
            android:textSize="32sp"
            android:fontFamily="@font/figtree_bold"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="10dp"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/user_name_local_name"
            android:layout_gravity="start"
            android:layout_marginVertical="5dp"
            android:textSize="16sp"
            />

        <EditText
            android:id="@+id/EdTxtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_txt_account"
            android:layout_marginVertical="5dp"
            android:textAlignment="textStart"
            android:hint="@string/user_name_local_name"
            android:minHeight="50dp"
            android:textStyle="bold"
            android:textSize="24sp"
            android:padding="10dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:layout_gravity="start"
            android:layout_marginVertical="5dp"
            android:textSize="16sp"
            />

        <EditText
            android:id="@+id/EdTxtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_txt_account"
            android:layout_marginVertical="5dp"
            android:textAlignment="textStart"
            android:hint="@string/password"
            android:minHeight="50dp"
            android:textStyle="bold"
            android:textSize="24sp"
            android:padding="10dp"
            android:password="true"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:layout_gravity="start"
            android:layout_marginVertical="5dp"
            android:textSize="16sp"
            />

        <EditText
            android:id="@+id/EdTxtConfPasword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_txt_account"
            android:layout_marginVertical="5dp"
            android:textAlignment="textStart"
            android:hint="@string/confirm_password"
            android:minHeight="50dp"
            android:textStyle="bold"
            android:textSize="24sp"
            android:padding="10dp"
            android:password="true"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/location"
            android:layout_gravity="start"
            android:layout_marginVertical="5dp"
            android:textSize="16sp"
            />

        <EditText
            android:id="@+id/Location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_txt_account"
            android:layout_marginVertical="5dp"
            android:textAlignment="textStart"
            android:hint="@string/location"
            android:minHeight="50dp"
            android:textStyle="bold"
            android:textSize="24sp"
            android:padding="10dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:layout_gravity="start"
            android:layout_marginVertical="5dp"
            android:textSize="16sp"
            />

        <EditText
            android:id="@+id/EdTxtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_txt_account"
            android:layout_marginVertical="5dp"
            android:textAlignment="textStart"
            android:hint="@string/email"
            android:minHeight="50dp"
            android:textStyle="bold"
            android:textSize="24sp"
            android:padding="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/languaje"
            android:layout_gravity="start"
            android:layout_marginVertical="5dp"
            android:textSize="16sp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:orientation="horizontal"
            android:gravity="center"
            >

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:layout_marginHorizontal="5dp"
                android:src="@drawable/catalonian"

                />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:layout_marginHorizontal="5dp"
                android:src="@drawable/spanish"
                />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:layout_marginHorizontal="5dp"
                android:src="@drawable/english"
                />

        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:minHeight="70dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/save"
        />

</LinearLayout>