<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"

    >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="15dp"
        android:layout_gravity="top"
         android:background="@color/white"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">

            <ImageButton
                android:id="@+id/BtnBack"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:background="@drawable/rounded_buttons_search"
                android:src="@drawable/ic_arrow_back" />

            <ImageView
                android:id="@+id/ImgChater"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/imagen_de_usuario"
                android:layout_gravity="center"
                />

            <TextView
                android:id="@+id/TxtNameChat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombre_de_usuario"
                android:textSize="30sp"
                android:layout_gravity="center"
                />


        </LinearLayout>

        <ImageButton
            android:id="@+id/btnCreateEvent"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:background="@drawable/rounded_buttons_create_event"
            android:src="@drawable/event_img"
            android:layout_gravity="end"
            />
    </FrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/RVMessages"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="vertical"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="10dp">


        <EditText
            android:id="@+id/editTextMessage"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:hint="@string/empieze_a_escribir_aqu"
            android:textSize="16sp"
            android:background="@drawable/rounded_edittxt_chat"
            android:padding="10dp"
            />

        <ImageButton
            android:id="@+id/BtnSendMsg"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/rounded_btn_send"
            android:contentDescription="@string/sendimg"
            android:padding="10dp"
            android:src="@drawable/ic_round_send_24"
            />
    </LinearLayout>
</LinearLayout>
