<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ThirdFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            >

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:textSize="25sp"
                android:layout_marginHorizontal="25dp"
                android:text="@string/matches"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/RVMaches"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginHorizontal="25dp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/buscar"
                android:layout_marginHorizontal="25dp"
                android:background="@drawable/rounded_edit_text"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:textSize="25sp"
                android:layout_marginHorizontal="25dp"
                android:text="@string/chats"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/RVChats"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />

        </LinearLayout>
    </LinearLayout>
</FrameLayout>